--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/tdLogin/ocsLogin.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/tdLogin/ocsLogin.ejs
@@ -30,14 +30,12 @@
 					</tr>
 					<th><b>USER TYPE</b></th>
 				   <td><input type="radio" name="type" value="admin" />Admin
-						<input type="radio" name="type" value="HotelManager" />Hotel_Manager
-						<input type="radio" name="type" value="Trans_Dealer" />Transport_Dealer
-						<input type="radio" name="type" value="traveler" />Traveler</td>
+						<input type="radio" name="type" value="customer" />Customer</td>
 					</tr>
 					<tr></tr>
 					<tr></tr>
 					<tr>
-						<td><center><a href="/tdReg"><br>Registration</a></center></td>
+						<td><center><a href="/ocsReg"><br>Registration</a></center></td>
 						<td><br><center><input type="submit" id="submit" name="submit" value="L O G I N"></center></td>
 					</tr>
 				</table>
