--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/ocsReg.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/ocsReg.ejs
@@ -25,6 +25,14 @@
 				<td> </td>
 			</tr>
 			<tr></tr>
+                        <tr></tr>
+                        <tr>
+				<td><b><div id="tou">TYPE OF USER</div></b></td>
+				<td><input type="radio" name="type" value="admin" />ADMIN
+				 <input type="radio" name="type" value="customer" />CUSTOMER</td>
+			</tr>
+                        <tr></tr>
+                        <tr></tr>
 			<tr>
 				<td><b>EMAiL</b></td>
 				<td><input type="email" id="email" name="email" value=""></td>
@@ -34,33 +42,6 @@
 			</tr>
 			<tr></tr>
 			<tr></tr>
-			<tr>
-				<td><br><b><div id="gen">GENDER</div></b></td>
-				<td><br><input type="radio" name="gender" value="M">Male
-				<input type="radio" name="gender" value="F">Female</td>
-				<td> </td>
-				<td> </td>
-				<td> </td>
-			</tr>
-			<tr></tr>
-			<tr></tr>
-			<tr>
-
-				<td><b><div id="edu">EDUCATION</div></b></td>
-				<td><input type="radio" name="education" value="ssc">S.S.C
-				<input type="radio" name="education" value="hsc">H.S.C
-				<input type="radio" name="education" value="bsc">B.Sc</td>
-				<td> </td>
-			</tr>
-			<tr></tr>
-			<tr></tr>
-			<tr>
-				<td><b><div id="tou">TYPE OF USER</div></b></td>
-				<td><input type="radio" name="type" value="admin" />Admin
-				 <input type="radio" name="type" value="HotelManager" />Hotel_Manager
-				 <input type="radio" name="type" value="Trans_Dealer" />Transport_Dealer
-				 <input type="radio" name="type" value="traveler" />Traveler</td>
-			</tr>
 			<tr>
 				<td><b><div id='pic'>PiCTURE</div></b></td>
 				<td><input type="file" id="picfile" name="file" accept=""/></td>
@@ -74,7 +55,7 @@
 				<td><br><center>
 					<div id="submit"><input type="submit" name="submit" value="R E G I S T E R">
 					<input type="reset" name="reset" value="REFRESH"></div>
-					<td><a href="/tdLogin">LOGiN</a></td>
+					<td><a href="/ocsLogin">LOGiN</a></td>
 				</center></td>
 			</tr>
 	</table>
