ONLINE_COMPUTER_SHOP
mid_assignment_updated

--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/admin_DASHBOARD/adminPHOTO.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/admin_DASHBOARD/adminPHOTO.ejs
@@ -31,10 +31,10 @@
 							<td>UPDATE_PROFILE_PIC:<input type="file" name="file"></td>
 						</tr> -->
 						<tr>
-								<td><div id = "pic"><img src="/DEALit/BackPics/<%= travelbliss_users.picture %>"  height='500' width='500'/></div></td>
+								<td><div id = "pic"><img src="/DEALit/BackPics/<%= ocsUsers.picture %>"  height='500' width='500'/></div></td>
 						</tr>
 					</table>
-		<a href="/td_DASHBOARD/TD_Profile">PROFiLE </a>
+		<a href="/admin_DASHBOARD/Admin_Profile">PROFiLE </a>
 
 </form>
 </center></body>
