--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/customer_DASHBOARD/customer_DASHBOARD.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/customer_DASHBOARD/customer_DASHBOARD.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Admin_HOMEPAGE</title>
+	<title>Customer_HOMEPAGE</title>
 	<link rel="stylesheet" type="text/css" href="/DEALit/css/TD_Dashboard.css">
 
 <!-- <style rel="stylesheet" >
@@ -15,7 +15,7 @@
 		<table border="8" id="table">
 			<tr>
 				<td>
-					<h1><center><div class="blink">Welcome TO <br>  the arena for COMPUTER SHOP !~_~!</div></center></h1>
+					<h1><center><div class="blink">Welcome TO <br>  the CUSTOMER arena for COMPUTER SHOP !~_~!</div></center></h1>
 					<br>
 					<div id="nametp">USERNAME:	<%= username %></div><br>
 				</td>
@@ -23,17 +23,17 @@
 			<tr>
 				<td>
 				<div id="linker">
-				<a href="/admin_DASHBOARD/TD_Lists"> LIST of T_DEALER</a> ~~~~~~
-				<a href="/admin_DASHBOARD/TD_Profile"> TD ~ PROFILE</a>
+				<a href="/customer_DASHBOARD/Components"> LIST of Components</a> ~~~~~~
+				<a href="/customer_DASHBOARD/Customer_Profile"> Customer ~ PROFILE</a>
 				</div>
 				<br>
 				<div id="lin1">
-					<a href="/admin_DASHBOARD/TD_Vehicles"> AVAiLABLE ~ VEHiCLES</a> ~~~
-					<a href="/admin_DASHBOARD/TD_Available_Regions"> AVAiLABLE ~ REgiONS</a> --------
-				<a href="/admin_DASHBOARD/TD_Traveled_Regions"> Traveled ~ REGiONS</a>
+					<!-- <a href="/customer_DASHBOARD/Components"> AVAiLABLE ~ Customers</a> ~~~ -->
+					<a href="/customer_DASHBOARD/Components"> Transaction Methods</a> --------
+				<a href="/customer_DASHBOARD/Components"> Transaction History</a>
 				</div>
 				<br><br>
-				<div id="lin2">
+				<!-- <div id="lin2">
 				<a href="/admin_DASHBOARD/TD_Available_Regions"> Status</a> ~~~
 				<a href="/admin_DASHBOARD/TD_Available_Regions"> AVAiLABLE TRANSACTiONS</a> ~~~
 				<a href="/admin_DASHBOARD/TD_Available_Regions"> USED TRANSACTIONS</a>
@@ -43,11 +43,11 @@
 				<a href="/admin_DASHBOARD/TD_Available_Regions"> COMPLAiNTS TO ADMiN</a> --
 				<a href="/admin_DASHBOARD/TD_Available_Regions"> R A T i N G S</a> --
 				<a href="/admin_DASHBOARD/TD_Available_Regions"> CONTACT ARENA</a>
-				</div>
+				</div> -->
 				<br>
 				<div id="logout">
-					<a href="/admin_DASHBOARD/TP_LiBRariES">TD~~LiBRariES</a> ----------
-					<a href="/admin_LogouT"> L O G O U T</a>
+					<!-- <a href="/admin_DASHBOARD/TP_LiBRariES">TD~~LiBRariES</a> -->
+					<a href="/ocsLogin"> L O G O U T</a>
 					</div>
 					<!-- <div id="logout">
 						<a href="/admin_DASHBOARD/TP_LiBRariES">TP~~LiBRariES</a>
