--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/admin_DASHBOARD/Admin_ProfileUpdate.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/admin_DASHBOARD/Admin_ProfileUpdate.ejs
@@ -20,42 +20,31 @@
 			<tr><td colspan="2"><h1><center>UPDATE PROFILE</center></h1></td></tr>
 			<tr>
 				<td>ID</td>
-				<td><input type="text" readonly name="userid" readonly value="<%=travelbliss_users.userid%>"></td>
+				<td><input type="text" readonly name="userID" readonly value="<%=ocsUsers.userID%>"></td>
 			</tr>
 			<tr>
 				<td>USERNAME</td>
-				<td><input type="text" name="username" value="<%=travelbliss_users.username%>"></td>
+				<td><input type="text" name="username" value="<%=ocsUsers.username%>"></td>
 			</tr>
 			<tr>
 				<td>PASSWORD :</td>
-				<td><input type="text" name="password" value="<%=travelbliss_users.password%>"></td>
+				<td><input type="text" name="password" value="<%=ocsUsers.password%>"></td>
+			</tr>
+			<tr>
+				<td>TYPE :</td>
+				<td><input type="text" readonly name="type" value="<%=ocsUsers.userType%>"></td>
 			</tr>
 			<tr>
 			<tr>
 				<td>EMAIL :</td>
-				<td><input type="text" name="email" value="<%=travelbliss_users.email%>"></td>
-			</tr>
-			<tr>
-				<tr>
-					<td>GENDER :</td>
-					<td><input type="radio" name="gender" value="MaLe">MaLe
-									<input type="radio" name="gender" value="FemaLe">FemaLe</td>
-				</tr>
-			<tr>
-			<tr>
-				<td>EDUCATION :</td>
-				<td><input type="text" name="education" value="<%=travelbliss_users.education%>"></td>
-			</tr>
-			<tr>
-				<td>TYPE :</td>
-				<td><input type="text" readonly name="type" value="<%=travelbliss_users.type%>"></td>
+				<td><input type="text" name="email" value="<%=ocsUsers.email%>"></td>
 			</tr>
 			<!-- <tr>
 				<td><b>UPDATE PROFILE PiCTURE</b></td>
 				<td><input type="file" readonly name="file" accept=""/></td>
 			</tr> -->
 			<tr>
-				<td><center><div id="prolink"><a href="/td_DASHBOARD/TD_Profile">PROFILE</a></div></center></td>
+				<td><center><div id="prolink"><a href="/admin_DASHBOARD/Admin_Profile">PROFILE</a></div></center></td>
 				<td><center><div id="prolink"><input type="submit" name="submit" value="UPDATE"></div></center></td>
 			</tr>
 		</table>
