--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/ocsLogin/ocsLogin.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/ocsLogin/ocsLogin.ejs
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LOGIN</title>
-	<link rel="stylesheet" type="text/css" href="/DEALit/css/TD_Login.css">
-	<script type="text/javascript" src="/DEALit/js/val_Login.js"></script>
+		<title>LOGIN</title>
+		<link rel="stylesheet" type="text/css" href="/DEALit/css/TD_Login.css">
+		<script type="text/javascript" src="/DEALit/js/val_Login.js"></script>
 	<!-- <script type="text/javascript" src="/DEALit/js/jquery-3.5.1.js"></script> -->
-
-<!-- <style rel="stylesheet">
-
-</style> -->
-
-		<!-- <script type="text/javascript">
-
-</script> -->
 
 </head>
 <body><center>
@@ -22,7 +14,7 @@
 				<table>
 					<tr>
 						<th>USERNAME</th>
-						<td><input type="text" name="username" id="name" onkeypress='return onlyalphabets(event)' ></td>
+						<td><input type="text" name="username" id="username" onkeypress='return onlyalphabets(event)' ></td>
 					</tr>
 					<tr>
 						<th>PASSWORD</th>
