--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/admin_DASHBOARD/Admin_ProfileUpdate.ejs
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/views/admin_DASHBOARD/Admin_ProfileUpdate.ejs
@@ -20,7 +20,7 @@
 			<tr><td colspan="2"><h1><center>UPDATE PROFILE</center></h1></td></tr>
 			<tr>
 				<td>ID</td>
-				<td><input type="text" readonly name="userID" readonly value="<%=ocsUsers.userID%>"></td>
+				<td><input type="number" readonly name="userID" readonly value="<%=ocsUsers.userID%>"></td>
 			</tr>
 			<tr>
 				<td>USERNAME</td>
